Fixed globals not aligning in the middle

--- a/app/globals.scss
+++ b/app/globals.scss
@@ -81,6 +81,7 @@ body {
   font-size: 1.8rem;
   max-width: 1400px;
   margin: 0 auto;
+  width: 100%;
 }
 
 a {
@@ -258,19 +259,23 @@ li {
   box-shadow: rgba(0, 0, 0, 0.4) 0 0 4px;
 }
 
+.main {
+  width: 100%;
+}
+
 @media (min-width: 0px) {
   .App {
-    margin: 0 15px;
+    padding: 0 15px;
   }
 }
 
 @media (min-width: 425px) {
   .App {
-    margin: 0 15px;
+    padding: 0 15px;
   }
 }
 @media (min-width: 768px) {
   .App {
-    margin: 0 30px;
+    padding: 0 30px;
   }
 }
